phone confirmation works

--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Calendar API Sample Application</title>
+    <link type="text/css" rel="stylesheet" href="/stylesheets/main.css">
   </head>
   <body>
 
