templates and stuff

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     </blockquote>
     {% endif %}
   
-    <form id="calendar_recording" action="/add" method="post">
+    <form id="calendar_recording" action="/create" method="post">
       <label> Choose a calendar: </label>
       {% if calendar_list %}
         <select name="calendar_id">
