--- a/main.html
+++ b/main.html
@@ -25,7 +25,11 @@
         {% endfor %}
         </select>
       {% endif %}
-      <input type="submit" />
+
+      <label> Input a custom message:
+        <input type="text" />
+      </label>
+      <input type="submit" name="msg"/>
     </form>
 
 
