--- a/signin.html
+++ b/signin.html
@@ -2,63 +2,25 @@
 	<head>
 		<!-- # ajax for submitting phone input form -->
 		<link type="text/css" rel="stylesheet" href="/stylesheets/main.css">
+		<link href='http://fonts.googleapis.com/css?family=Happy+Monkey' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,700' rel='stylesheet' type='text/css'>
+
 		<script src="http://code.jquery.com/jquery-latest.min.js"
         type="text/javascript"></script>
     </head>
 
 
         <body style="background-color:#2d4174;">
-		<script>
-			$(document).on('submit', 'form.phone_input', function(evt){
-				evt.preventDefault();
-				// TODO: CHECK IF PHONE NUMBER IS 10 DIGITS
-				$.ajax({
-					url: $(this).attr('action'),
-					type: $(this).attr('method'),
-					data: $(this).serialize(),
-					success: function() {
-						$(".conf_input").show();
-					}
-				});
-			});
-			$(document).on('submit', 'form.conf_input', function(evt){
-				$.ajax({
-					url: $(this).attr('action'),
-					type: $(this).attr('method'),
-					data: $(this).serialize(),
-					success: function(json) {
-						if (json) {
-							console.log(json);
-							$(".error").show();
-						} else {
-							// redirect to next page
-							location.href = "/create";
-						}
-					}
-				});
-				evt.preventDefault();
-			});
 
-		</script>
-	
-	<div>
-		<h1 style="text-align:center;font-family:happy monkey;color:#ea8b75;font-size:40px;">
-			<img src="ttthm logo.jpg" width="550" height="275">
-		<br/>
-		<br/>
-		<form class="phone_input" action="" method="POST">
-			<label >Welcome to <br/> Talk to the HANDnswering machine!
-			</label>
-		</form>
-	</h1>
-	<h2 style="text-align:center;font-family:happy monkey;color:white;font-size:20px;">
-		<form class="conf_input" action="/confirm_code" method="POST">
-			<label>Please enter your Gmail account information to get started:<br/>
-				<input type="text" name="conf" />
-				<button>Go</button>
-			</label>
-		</form>
-	</h2>
+	<div class="main">
+
+		<img src="/stylesheets/ttthmlogo.jpg" width="550" height="275">
+
+		<p><h1><span class="emph">custom call responders</span> 
+			<br/><span class="normal">during busy blocks in your calendar</span></h1></p>
+		<input type="button" value="Sign in with Google" class="button sign-in" onClick="window.location='/register' "/>
+		<!-- <input class="button sign-in" href="/register">Sign in with Google</a> -->
+
 	</div>
 	</body>
 </html>
